ahora los tipos de atributos disponibles se filtran por proyecto

--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -9,7 +9,7 @@
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="/">Proyectos</a>
+			<a href="/"><p>{{ proyecto.nombre }}</p> Fases</a>
 		</li>
 	</ul>
 </div>
