--- a/sap/templates/Roles/desasignar_fase_rol.html
+++ b/sap/templates/Roles/desasignar_fase_rol.html
@@ -5,7 +5,7 @@
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="#">Crear Rol</a>
+			<a href="#">Desasignar Fase a Rol</a>
 		</li>
 	</ul>
 </div>
