--- a/sap/templates/Roles/roles.html
+++ b/sap/templates/Roles/roles.html
@@ -50,6 +50,8 @@
 				      		{% if mi_rol.proyecto %}
 				      			<a href="asignar_fases/{{ mi_rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Fases</button></a>
 				      			<a href="desasignar_fases/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Desasignar Fases</button></a>
+				      		{% else %}
+				      			<a href="asignar_proyecto_rol/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Proyecto</button></a>
 				      		{% endif %}
 				      		<a href="asignar/{{ mi_rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Rol</button></a>
 				      		<a href="desasignar/{{ mi_rol.id }}/"><button type="button" class="btn btn-default btn-sm">Desasignar Rol</button></a>
@@ -87,6 +89,8 @@
 				      		{% if rol.proyecto %}
 				      			<a href="asignar_fases/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Fases</button></a>
 				      			<a href="desasignar_fases/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Desasignar Fases</button></a>
+				      		{% else %}
+				      			<a href="asignar_proyecto_rol/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Proyecto</button></a>
 				      		{% endif %}
 				      		<a href="asignar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Asignar Rol</button></a>
 				      		<a href="desasignar/{{ rol.id }}/"><button type="button" class="btn btn-default btn-sm">Desasignar Rol</button></a>
