--- a/sap/templates/proyectos/consultarproyecto.html
+++ b/sap/templates/proyectos/consultarproyecto.html
@@ -37,7 +37,7 @@
 						  		<td><p><h4><span class="label label-default">{{ proyecto.estado }}</span></h4></h4></p></td>
 						  	</tr>
 						 	<tr class="active">
-						  		<td><p><h4>Fecha de Inicio</h4></p></td>
+						  		<td><p><h4>Fecha de Inicio:</h4></p></td>
 						  		<td><p><h4><span class="label label-default">{{ proyecto.fecha_inicio | date:"j F, Y" }}</span></h4></h4></p></td>
 							</tr>
 						  	<tr class="active">
