--- a/sap/templates/tipoitem/listartipoitem.html
+++ b/sap/templates/tipoitem/listartipoitem.html
@@ -34,7 +34,7 @@
 						</div>
 								 
 						<div class="col-md-3 col lg-3">
-							<a href="importar_tipoitem/{{ tipoitem.id }}/"><button type="button" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-import"></span> Importar</button></a>
+							<a href="importar_tipo_atributo/{{ tipoitem.id }}/"><button type="button" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-import"></span> Importar</button></a>
 						</div>
 								 
 					</div>
