--- a/sap/templates/tipoAtributo/tipo_atributo_nuevo.html
+++ b/sap/templates/tipoAtributo/tipo_atributo_nuevo.html
@@ -17,15 +17,14 @@
 
 {% block contenido %}
 <div class="content-secondary">
-	{% if form.errors %}
-		{% for error in errors %}
-			<ul>
-				<li>{{ error }} </li>
-			</ul>
-		{% endfor %}
-	{% endif %}
-	
 	<form action="" method="post">
+			{% if form.errors %}
+				{% for error in form.errors %}
+					<ul>
+						<li>{{ error }} </li>
+					</ul>
+				{% endfor %}
+			{% endif %}
 		<table align="center">
 			{{ form.as_table }}
 		</table>
