--- a/sap/templates/tipoAtributo/tipo_atributo_nuevo.html
+++ b/sap/templates/tipoAtributo/tipo_atributo_nuevo.html
@@ -1,8 +1,8 @@
 {% extends "base_general.html" %}
 
 {% block tipo_Item_y_Atributo %}
-<li><a href="/adm_tipos_item">Administrar Tipos de Item</a></li>
-<li><a href="/adm_tipos_atributo">Administrar Tipos de Atributo</a></li>
+<li><a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_item/">Administrar Tipos de Item</a></li>
+<li><a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_atributo">Administrar Tipos de Atributo</a></li>
 {% endblock %}
 
 {% block menu %}		
