--- a/sap/templates/tipoitem/modificartipoitem.html
+++ b/sap/templates/tipoitem/modificartipoitem.html
@@ -23,16 +23,34 @@
 			</div>
 				
 			<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+			
 				<form action="" method="post">{% csrf_token %}
-					{% if form.errors %}
-						<font color="red"><h4><p align="center"><b>Por favor verifique:</b></p></h4></font>
-					{% endif %}
-					{% if mensaje %}
-						<font color="red"><h4><p align="center"><b>Por favor verifique:</b></p></h4></font>
-						<h6><li align="center"><b>{{ mensaje }}</b></li></h6>
-					{% endif %}
 					<table class="table table-hover table-bordered table-condensed table-responsive">
-						{{ form.as_table }}
+					
+						<tr><th><label for="id_Nombre_Tipo_de_Item"><h4><b>Nombre Tipo de Item:</b></h4></label>
+						</th><td>
+							{% if form.Nombre_Tipo_de_Item.errors %}
+							<div class="form-group has-error">
+								  <label class="control-label" for="inputError1">{{ form.Nombre_Tipo_de_Item.errors }}</label>
+								  <input id="id_Nombre_Tipo_de_Item" maxlength="30" name="Nombre_Tipo_de_Item" type="text" class="form-control" value="{{ form.data.Nombre_Tipo_de_Item}}" />
+							</div>
+							{% else %}
+								<input id="id_Nombre_Tipo_de_Item" maxlength="30" name="Nombre_Tipo_de_Item" type="text" class="form-control" value="{{ tipoitem.nombre }}" />
+							{% endif %}
+						</td></tr>
+						
+						<tr><th><label for="id_Descripcion"><h4><b>Descripcion:</b></h4></label>
+						</th><td>
+							{% if form.Descripcion.errors %}
+							<div class="form-group has-error">
+								  <label class="control-label" for="inputError1">{{ form.Descripcion.errors }}</label>
+								  <textarea class="form-control" id="id_Descripcion" name="Descripcion" rows="5">{{ tipoitem.descripcion }}</textarea>
+							</div>
+							{% else %}
+								<textarea class="form-control" id="id_Descripcion" name="Descripcion" rows="5">{{ form.data.Descripcion }}</textarea>
+							{% endif %}
+						
+						</td></tr>
 					</table>
 					<div align="center"><br>
 						<input class="btn btn-default" type="submit" value="Guardar Cambios"/>
