--- a/sap/templates/items/cargaratributos.html
+++ b/sap/templates/items/cargaratributos.html
@@ -1,10 +1,15 @@
 {% extends "base_general.html" %}
 
+{% block tipo_Item_y_Atributo %}
+<li><a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_item/">Administrar Tipos de Item</a></li>
+<li><a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_atributo">Administrar Tipos de Atributo</a></li>
+{% endblock %}
+
 {% block menu %}		
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="/">Proyectos</a>
+			<a href="/"><p>Atributos de</p> {{ itemactual.nombre }}</a>
 		</li>
 	</ul>
 </div>
@@ -20,16 +25,47 @@
 
 {% block contenido %}
 <div class="content-secondary">
+
+
+{% if lista_error %}
+<div class="row">
+    <div class="panel panel-danger">
+    	<div class="panel-heading">
+    		<h3 class="panel-title">Por favor verifique:</h3>
+        </div>
+        <div class="panel-body">
+        <br>
+        <ul class="list-unstyled">
+           {% for campo, mensaje in lista_error %}
+		<ul>
+			<li><b>{{campo}}</b></li>
+			{{ mensaje }}
+		</ul>
+  			{% endfor %}
+		</ul>
+        </div>
+       	</div>
+</div>
+{% endif %}
+
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 		{% if lista_valores %}
 		<form action="" method="post">
-			<div class="panel-group" id="accordion">
+			
 				<table align="center">
 			{% for valores in lista_valores %}
 				<tr>
-					<td>{{ valores.nombre_atributo }} :  </td>
+					{% for orden, nombre, longitud, precision, maxvalue, minvalue, oblig in listaPresicionLongitud %}
+							{% if valores.nombre_atributo == nombre and valores.orden == orden %}
+								{% if oblig == True %}
+									<td><th><label>{{ valores.nombre_atributo }} *:</label></th></td>
+								{% else %}
+									<td><th><label>{{ valores.nombre_atributo }}:</label></th></td>
+								{% endif %}
+							{% endif %}
+					{% endfor %}
 					{% ifequal valores.tipo_dato "Fecha" %}
-						<td><input type="date" name={{forloop.counter}} value="{{ valores.valor_fecha }}" /> En formato AAAA-MM-DD {{ valores.orden }}
+						<td><input type="date" name={{forloop.counter}} class="form-control" value="{{ valores.valor_fecha }}" /> En formato Día/Mes/Año {{ valores.orden }}
 						</td>
 					{% endifequal %}
 					{% ifequal valores.tipo_dato "Logico" %}
@@ -48,19 +84,29 @@
 						</td>
 					{% endifequal %}
 					{% ifequal valores.tipo_dato "Numerico" %}
-						<td><input type="number" name={{forloop.counter}} value="{{ valores.valor_numerico }}" /> {{ valores.orden }}
+					{% for orden, nombre, longitud, precision, maxvalue, minvalue, oblig in listaPresicionLongitud %}
+							{% if valores.nombre_atributo == nombre and valores.orden == orden %}
+						<td><input type="number" step="any" max="{{ maxvalue }}" min="{{ minvalue }}" name="{{forloop.counter}}" class="form-control" value="{{ valores.valor_texto }}"/> {{ valores.orden }}
 						</td>
+						{% endif %}
+				    {% endfor %}
 					{% endifequal %}
 					{% ifequal valores.tipo_dato "Texto" %}
-				    	<td><input type="text" name="{{forloop.counter}}" maxlength=300 value="{{ valores.valor_texto }}" /> {{ valores.orden }}
+						{% for orden, nombre, longitud, precision, maxvalue, minvalue, oblig in listaPresicionLongitud %}
+							{% if valores.nombre_atributo == nombre and valores.orden == orden %}
+								
+				    	<td>
+				    		<textarea class="form-control" maxlength="{{ longitud }}" name="{{forloop.counter}}" rows="5" value="{{ valores.valor_texto }}">{{ form.data.Descripcion }}</textarea>{{ valores.orden }}
 				    	</td>
+				    	{% endif %}
+				    {% endfor %}
 				    {% endifequal %}
 				</tr>
 			{% endfor %}
 		</table>
 					{% csrf_token %}
 					<input action="adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/atributos/" class="btn btn-default" type="submit" value="Crear Item"/>
-		</div>
+		
 		</form>
 		{% else %}
 			{% if error %}
