--- a/sap/templates/items/items.html
+++ b/sap/templates/items/items.html
@@ -1,10 +1,15 @@
 {% extends "base_general.html" %}
 
+{% block tipo_Item_y_Atributo %}
+<li><a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_item/">Administrar Tipos de Item</a></li>
+<li><a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_tipos_atributo">Administrar Tipos de Atributo</a></li>
+{% endblock %}
+
 {% block menu %}		
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="/">Proyectos</a>
+			<a href="/"><p>{{ proyecto.nombre }}</p>Items</a>
 		</li>
 	</ul>
 </div>
@@ -16,9 +21,9 @@
 		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Crear Item</button></a>
 <!-- 		<a href="#"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Importar Fase</button></a>-->
 		<form action="" method="get">
-				<input type="text" name="busqueda" class="btn btn-default" placeholder="Busqueda de Items..." value="{{ query|escape }}">
+				<input type="text" name="busqueda" class="form-control" placeholder="Busqueda de Items..." value="{{ query|escape }}">
 				<span class="glyphicon glyphicon-search"></span>
-				<input class="btn btn-default" type="submit" value="Buscar Item">
+				<input class="btn btn-default" type="submit" value="Buscar Items">
 		</form>
 	</form>
 </div>
