--- a/sap/templates/relaciones/relaciones.html
+++ b/sap/templates/relaciones/relaciones.html
@@ -46,7 +46,7 @@
 					<div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.id }}">
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacionid }}">
 				          			{{ relacion.nombreitemrelacionado }}
 				        		</a>
 				      		</h4>
@@ -55,16 +55,16 @@
 				    <div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.id }}">
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacionid }}">
 				          			{{ relacion.tiporelacion }}
 				        		</a>
 				      		</h4>
 				    	</div>
 				    </div>
 				    
-				    <div id="collapse{{ relacion.id }}" class="panel-collapse collapse pull-left">
+				    <div id="collapse{{ relacion.relacionid }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ relacion.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
+				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ relacion.relacionid }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
 				      </div>
 				    </div>
 				</div>
