--- a/sap/templates/items/items.html
+++ b/sap/templates/items/items.html
@@ -74,7 +74,7 @@
 				      		<a href="atributos/{{ item.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Atributos</button></a>
 				      		<a href="relaciones/{{ item.id }}"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Relaciones</button></a>
 				      		<a href="versiones/{{ item.id }}"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Versiones</button></a>
-				      		<button class="btn btn-danger btn-sm item" data-toggle="modal" data-target="#myModal" data-id="{{ item.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
+				      		<a href="eliminar/{{ item.id }}"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span> Eliminar</button></a>
 				      </div>
 				    </div>
 				</div>
