--- a/sap/templates/items/mostrareliminados.html
+++ b/sap/templates/items/mostrareliminados.html
@@ -86,15 +86,40 @@
 				</div>
 			<div class="panel-group" id="accordion">
 				<table align="center">
-			{% for relacion in lista_relaciones %}
-			{% ifequal relacion.itemrelacionado id_item %}
-			{% else %}
+		{% else %}
+		{% if padre %}
+		<div class="row ">
+			<div class="panel-group" id="accordion">
+				<div class="panel panel-default">
+					<div class="row">
+				    	<div class="col-md-4">
+				   			<div class="panel-heading">
+				      			<h4 class="panel-title"><b>Nombre</b></h4>
+				    		</div>
+				    	</div>				    
+				    	<div class="col-md-4">
+				    		<div class="panel-heading">
+				      			<h4 class="panel-title"><b>Relacion (Item listado)</b></h4>
+				    		</div>
+				    	</div>
+				    </div>
+				</div>
+			<div class="panel-group" id="accordion">
+				<table align="center">
+		{% else %}	
+				<div class="jumbotron">
+					<div class="bs-example">
+						<p class="text-warning" align="center"><small>No se encontro relacion padre/antecesor</small></p>
+					</div>
+				</div>
+		{% endif %}
+			{% if padre %}
 				<div class="panel panel-default">
 					<div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacionid }}">
-				          			{{ relacion.nombreitemrelacionado }}
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ padre.relacion }}">
+				          			{{ padre.nombreitem }}
 				        		</a>
 				      		</h4>
 				    	</div>
@@ -102,20 +127,50 @@
 				    <div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacionid }}">
-				          			{{ relacion.tiporelacion }}
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ padre.relacion }}">
+				          			Padre
 				        		</a>
 				      		</h4>
 				    	</div>
 				    </div>
 				    
-				    <div id="collapse{{ relacion.relacionid }}" class="panel-collapse collapse pull-left">
+				    <div id="collapse{{ padre.relacion }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ relacion.relacionid }}"><span class="glyphicon glyphicon-trash"></span> Revivir </button>
+				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ padre.relacion }}"><span class="glyphicon glyphicon-trash"></span> Revivir </button>
 				      </div>
 				    </div>
 				</div>
-			{% endifequal %}
+				</table>
+					{% csrf_token %}
+			{% endif %}
+			{% if lista_relaciones %}
+			{% for relacion in lista_relaciones %}
+				<div class="panel panel-default">
+					<div class="col-md-4">
+				    	<div class="panel-heading">
+				      		<h4 class="panel-title">
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacion }}">
+				          			{{ relacion.nombreitem }}
+				        		</a>
+				      		</h4>
+				    	</div>
+				    </div>				    
+				    <div class="col-md-4">
+				    	<div class="panel-heading">
+				      		<h4 class="panel-title">
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacion }}">
+				          			Hijo
+				        		</a>
+				      		</h4>
+				    	</div>
+				    </div>
+				    
+				    <div id="collapse{{ relacion.relacion }}" class="panel-collapse collapse pull-left">
+				      <div class="panel-body">
+				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ relacion.relacion }}"><span class="glyphicon glyphicon-trash"></span> Revivir </button>
+				      </div>
+				    </div>
+				</div>
 			{% endfor %}
 		</table>
 					{% csrf_token %}
@@ -124,7 +179,7 @@
 		{% else %}	
 				<div class="jumbotron">
 					<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron Relaciones</small></p>
+						<p class="text-warning" align="center"><small>No se encontraron hijos/sucesores</small></p>
 					</div>
 				</div>
 			
@@ -132,6 +187,6 @@
 		<div  align="center">
 			<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/">Volver</a>
 		</div>
-
+{% endif %}
 </div>
 {% endblock %}
