--- a/sap/templates/items/items.html
+++ b/sap/templates/items/items.html
@@ -4,7 +4,10 @@
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="/">Proyectos</a>
+			<a href="#">Items</a>
+		</li>
+		<li id="option2">
+		 	<a href="adm_lineas_base/">Lineas Base</a>
 		</li>
 	</ul>
 </div>
